# AccessForge

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  discord-intro.txt
.github/workflows/: ci.yml  release.yml
docs/: getting-started.md  progress.md
docs/technical/: design-notes.md  manifest-spec.md  state-file-spec.md
src/: main.rs  path_setup.rs  updater.rs
src/cli/: init.rs  install.rs  mod.rs  package.rs  watch.rs
src/installer/: loaders.rs  mod.rs
src/manifest/: mod.rs  types.rs
src/registry/: discovery.rs  mod.rs  releases.rs
src/state/: mod.rs
src/steam/: mod.rs
src/ui/: add_mod_dialog.rs  detail.rs  install_dialog.rs  mod.rs  tabs.rs
src/worker/: discover.rs  install.rs  mod.rs
