[package]
name = "accessforge"
version = "1.0.3"
edition = "2024"

[[bin]]
name = "AccessForge"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
steamlocate = "2.0.1"
thiserror = "2.0.18"
ureq = { version = "3.3.0", features = ["json"] }
versions = "7.0.0"
wxdragon = { version = "0.9.14" }
zip = "8.4.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

[dev-dependencies]
tempfile = "3"

[build-dependencies]
embed-manifest = "1.5.0"
